# freddie-cli

./: .gitignore  README.md  config.yml  pyproject.toml  requirements.txt  setup.py  template.env
data/economic/: BLS_Income.csv  BLS_Infl.xlsx  FHFA_House_Price_Index.xlsx  FM_30yr_FRM_Rate.xlsx
download/: download_freddie_mac_data.py  main.py
freddie_cli/: cli.py
freddie_cli/commands/: download.py  process.py  sample.py  train.py
process/: economic_data_processing.py  main.py  mortgage_data_processing.py
sample/: main.py  sample_selection.py
train/: main.py  random_forest.py  sparse_gam.py
utils/: config.py  logging.py
